--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 <div class="header">
-    <div class="box box1"><i class="fa-solid fa-gear"></i></div>
-    <div class="box box2"><i class="fa-solid fa-wrench"></i></div>
-    <div class="box box3"><i class="fa-solid fa-toolbox"></i></div>
-    <div class="box box4"><i class="fa-solid fa-screwdriver"></i></div>
+    <div class="box box1"><a href="#"><i class="fa-solid fa-gear"></i></a></div>
+    <div class="box box2"><a href="#"><i class="fa-solid fa-wrench"></i></a></div>
+    <div class="box box3"><a href="#"><i class="fa-solid fa-toolbox"></i></a></div>
+    <div class="box box4"><a href="#"><i class="fa-solid fa-screwdriver"></i></a></div>
 </div>
 
 <div class="links">
